# arch

./: .codacy.yml  .codebeatignore  .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .landscape.yml  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  .travis_coveragerc  Forecasting.md  LICENSE.md  MANIFEST.in  README.md  README.rst  api.html  appveyor.yml  arch.pyproj  azure-pipelines.yml  changes.html  codecov.yml  genindex.html  github_deploy_key.enc  index.html  large-data.py  legacy-travis.yml  lgtm.yml  meson.build  meson.options  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+4 more)
.github/: codeql.yml  dependabot.yml
_modules/: functools.html  index.html  numpy.html  typing.html
_sources/: changes.rst.txt  index.rst.txt
_static/: basic.css  documentation_options.js  nbsphinx-code-cells.css  nbsphinx-gallery.css
arch/: __init__.py  _version.py  base.py  conftest.py  distribution.py  mean.py  meson.build  recursions.pyx  recursions_python.py  typing.py  utils.py  volatility.py
arch/__future__/: _utility.py
arch/bootstrap/: __init__.py  _cython_coverage.py  _samplers.c  _samplers.cp35-win_amd64.pyd  _samplers.pyi  _samplers.pyx  _samplers_python.py  base.py  meson.build  multiple_comparison.py  multiple_comparrison.py
arch/bootstrap/tests/: test_bootstrap.py  test_multiple_comparrison.py
arch/common/: model.py
arch/compat/: matplotlib.py  numba.py  numpy.py  pandas.py  python.py  statsmodels.py
arch/covariance/: __init__.py  kernel.py  var.py
arch/data/: utility.py
arch/data/binary/: __init__.py
arch/data/core_cpi/: __init__.py
arch/data/crude/: __init__.py
arch/data/default/: __init__.py
arch/data/frenchdata/: __init__.py
arch/data/nasdaq/: __init__.py
arch/data/sp500/: __init__.py
arch/data/vix/: __init__.py
arch/data/wti/: __init__.py
arch/experimental/: __init__.py  engine.py
arch/multivariate/: NOTES.md  __init__.py  base.py  data.py  dcc.py  distribution.py  mean.py  utility.py  volatility.py
arch/multivariate/tests/: test_distribution.py
arch/tests/: test_build.py  test_compat.py  test_data.py  test_deprecations.py  test_distribution.py  test_examples.py  test_har.py  test_mean.py  test_recursions.py  test_tester.py  test_utils.py  test_vendor.py  test_volatility.py
arch/tests/bootstrap/: test_block_length.py  test_bootstrap.py  test_multiple_comparison.py  test_multiple_comparrison.py
arch/tests/covariance/: covariance_data.py  test_covariance.py  test_var.py
arch/tests/experimental/: test_engine.py
arch/tests/multivariate/: test_dcc.py  test_mean.py  test_smoke.py  test_utility.py  utility.py
arch/tests/unitroot/: cointegration_data.py  test_dynamic_ols.py  test_engle_granger.py  test_fmols_ccr.py  test_phillips_ouliaris.py  test_unitroot.py
arch/tests/unitroot/data/: zivot-andrews.csv
arch/tests/univariate/: test_append.py  test_arch_in_mean.py  test_base.py  test_diagnostics.py  test_distribution.py  test_forecast.py  test_mean.py  test_moment.py  test_recursions.py  test_rescale.py  test_variance_forecasting.py  test_volatility.py
arch/tests/utility/: __init__.py  test_array.py  test_cov.py  test_io.py  test_timeseries.py  test_utility.py
arch/unitroot/: __init__.py  _engle_granger.py  _phillips_ouliaris.py  _shared.py  cointegration.py  unitroot.py
arch/unitroot/critical_values/: dfgls.py  dickey_fuller.py  engle_granger.py  kpss.py  phillips_ouliaris.py  zivot_andrews.py
arch/unitroot/critical_values/simulation/: adf_simulation.py  adf_z_critical_values_simulation.py  adf_z_critical_values_simulation_joblib.py  adf_z_critical_values_simulation_large_cluster.py  adf_z_simlation_process.py  dfgls_critical_values_simulation.py  dfgls_simulation_process.py  eg_setup.bat  eg_setup.ps1  eg_setup.sh  engle_granger_simulation.py  engle_granger_simulation_process.py  kpss_critical_values_simulation.py  kpss_simulation_process.py  phillips-ouliaris-simulation-process.py  phillips-ouliaris-simulation.py  phillips_ouliaris.py  requirements.txt  shared.py
arch/unitroot/tests/: test_unitroot.py
arch/univariate/: __init__.py  _cython_coverage.py  base.py  diagnostics.py  distribution.py  har.py  mean.py  meson.build  recursions.c  recursions.cp35-win_amd64.pyd  recursions.pyi  recursions.pyx  recursions_python.py  volatility.py
arch/univariate/tests/: test_distribution.py  test_forecast.py  test_mean.py  test_recursions.py  test_variance_forecasting.py  test_volatility.py
arch/utility/: __init__.py  array.py  cov.py  exceptions.py  io.py  testing.py  timeseries.py
arch/utility/tests/: test_array.py  test_cov.py  test_timeseries.py
bootstrap/: background.html  bootstrap.html  bootstrap_examples.html  bootstrap_examples.ipynb  confidence-intervals.html  iid-bootstraps.html  low-level-interface.html  parameter-covariance-estimation.html  semiparametric-parametric-bootstrap.html  timeseries-bootstraps.html
building/: README.md  WHEELS.md  binstar_linux.sh  binstar_unix.sh  binstar_windows.bat  python2_setup.bat  python3_setup.bat
changes/: 1.0.html  2.0.html  3.0.html  4.0.html  5.0.html  6.0.html
ci/: install-common.sh  install-statsmodels-main.sh  install-statsmodels-master.sh  performance.py  statsmodels-master.sh  travis-osx-setup.sh  use-conda.sh  use-pip.sh
covariance/: covariance.html
devel/: .buildinfo  .doctr-files  api.html  changes.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml  types.html
doc/: .doctr-files  Makefile  api.html  changes.html  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  sitemap.xml
examples/: CGARCH modelling.ipynb  bootstrap_examples.ipynb  bootstrap_multiple_comparison.ipynb  examples.ipynb  experimental_accelerated_numpy.ipynb  multiple-comparison_examples.ipynb  unitroot_cointegration_examples.ipynb  unitroot_examples.ipynb  univariate_forecasting_with_exogenous_variables.ipynb  univariate_using_fixed_variance.ipynb  (+3 more)
new/: oaxaca.py  (+2 more)
(+331 files in other folders)
