[metadata]
description-file = README.md
license_file = LICENSE.md

[flake8]
max-line-length = 99

[versioneer]
VCS = git
style = pep440
versionfile_source = arch/_version.py
versionfile_build = arch/_version.py
tag_prefix =
parentdir_prefix = arch-

[tool:pytest]
minversion = 3.06
testpaths = arch
addopts = --strict
filterwarnings =
    ignore:`formatargspec`:DeprecationWarning:statsmodels
    ignore:Using or importing:DeprecationWarning
markers =
    slow: mark a test as slow

[isort]
known_compat=arch.compat.*
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,PRE_CORE,FIRSTPARTY,LOCALFOLDER
known_first_party=arch
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
multi_line_output=0
force_grid_wrap=0
combine_as_imports=True
force_sort_within_sections=True
line_width=99
