[metadata]
description-file = README.md
license_file = LICENSE.md

[flake8]
max-line-length = 88
ignore = E203,W503,BLK100

[versioneer]
VCS = git
style = pep440
versionfile_source = arch/_version.py
versionfile_build = arch/_version.py
tag_prefix =
parentdir_prefix = arch-

[tool:pytest]
minversion = 3.06
testpaths = arch
addopts = --strict
filterwarnings =
    ignore:`formatargspec`:DeprecationWarning:statsmodels
    ignore:Using or importing:DeprecationWarning
markers =
    slow: mark a test as slow


[isort]
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,PRE_CORE,FIRSTPARTY,LOCALFOLDER
known_first_party=arch
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
multi_line_output=3
include_trailing_comma=True
use_parentheses=True
line_length=88
known_compat=arch.compat.*
force_grid_wrap=0
combine_as_imports=True
force_sort_within_sections=True
force_to_top=True

[mypy]
ignore_missing_imports=True
no_implicit_optional=True
strict_equality=True
disallow_untyped_defs=True
disallow_incomplete_defs=True
