[metadata]
description-file = README.md
license_file = LICENSE.md

[flake8]
# Leave at 99 for now
max-line-length = 99
ignore = E203,W503,BLK100

[versioneer]
VCS = git
style = pep440
versionfile_source = arch/_version.py
versionfile_build = arch/_version.py
tag_prefix =
parentdir_prefix = arch-

[tool:pytest]
minversion = 3.06
testpaths = arch
addopts = --strict
filterwarnings =
    ignore:`formatargspec`:DeprecationWarning:statsmodels
    ignore:Using or importing:DeprecationWarning
    ignore:Session._key_changed is deprecated:DeprecationWarning
    error:Support for multi-dimensional:DeprecationWarning
    error:Mutating unit root tests is deprecated:FutureWarning
    error:invalid value encountered in cos:RuntimeWarning
    error:invalid value encountered in log:RuntimeWarning
    error:divide by zero encountered in double_scalars:RuntimeWarning
    error:Lag selection has changed:DeprecationWarning
markers =
    slow: mark a test as slow


[isort]
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,PRE_CORE,FIRSTPARTY,LOCALFOLDER
known_first_party=arch
known_third_party=Cython,numpy,matplotlib,pandas,patsy,pytest,statsmodels,seaborn
multi_line_output=3
include_trailing_comma=True
use_parentheses=True
line_length=88
known_compat=arch.compat.*
force_grid_wrap=0
combine_as_imports=True
force_sort_within_sections=True
force_to_top=True

[mypy]
ignore_missing_imports=True
no_implicit_optional=True
strict_equality=True
disallow_untyped_defs=True
disallow_incomplete_defs=True

[mypy-arch.conftest]
check_untyped_defs=False
disallow_untyped_defs=False

[mypy-arch._version]
check_untyped_defs=False
disallow_untyped_defs=False


[mypy-arch.vendor.*]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False

[mypy-arch.tests.*]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False

[mypy-versioneer]
check_untyped_defs=False
disallow_untyped_defs=False
disallow_incomplete_defs=False
